
SVN
-------------------------------

XML:   Resolved issue CASTOR-1640 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Add new tree of tests of known bugs
       Details: http://jira.codehaus.org/browse/CASTOR-1640
       (Edward - 20061019)

XML:   Resolved issue CASTOR-1639 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Refactor CTF test-with-reference-document
       Details: http://jira.codehaus.org/browse/CASTOR-1639
       (Edward - 20061019)

JDO:   Resolved issue CASTOR-1581 using contribution from Holger West [holger.west@syscon-informatics.de]
       Added database appender for log4j through CastorJDO.
       Details: http://jira.codehaus.org/browse/CASTOR-1581
       (Ralf - 20061019)

XML:   Resolved issue CASTOR-1638 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Remove trailing blanks in release notes
       Details: http://jira.codehaus.org/browse/CASTOR-1638
       (Edward - 20061019)

XML:   Resolved issue CASTOR-1636 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Checkstyle-based corrections in javasource
       Details: http://jira.codehaus.org/browse/CASTOR-1636
       (Edward - 20061019)

XML:   Resolved issue CASTOR-1612 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Update CTF documentation for new test case type
       Details: http://jira.codehaus.org/browse/CASTOR-1612
       (Edward - 20061018)

XML:   Resolved issue CASTOR-1229 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with code generator ignoring nillable attribute for element references.
       Details: http://jira.codehaus.org/browse/CASTOR-1229
       (Werner - 20061018)

XML:   Resolved issue CASTOR-1635 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with generation of incorrect validation code for schema type 'gMonthDay'
       Details: http://jira.codehaus.org/browse/CASTOR-1635