@@ -2,6 +2,11 @@
 SVN
 -------------------------------
 
+ALL:   Resolved issue CASTOR-1637 using contribution from Edward Kuns [edward.kuns@aspect.com]
+       Update to checkstyle rule set
+       Details: http://jira.codehaus.org/browse/CASTOR-1637
+       (Edward - 20061019)
+
 XML:   Resolved issue CASTOR-1640 using contribution from Edward Kuns [edward.kuns@aspect.com]
        Add new tree of tests of known bugs
        Details: http://jira.codehaus.org/browse/CASTOR-1640
